kubernetes/mailhog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailhog
  namespace: supp-atendimento
  labels:
    app: mailhog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailhog
  template:
    metadata:
      labels:
        app: mailhog
    spec:
      restartPolicy: Always
      containers:
        - name: mailhog
          image: mailhog/mailhog
          ports:
            - containerPort: 1025
              name: smtp
              protocol: TCP
            - containerPort: 8025
              name: http
              protocol: TCP
