kubernetes/webserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  namespace: supp-atendimento
  labels:
    app: webserver
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      restartPolicy: Always
      containers:
        - name: webserver
          image: suppregistry.azurecr.io/supp-atendimento/webserver:3.0.0
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 3
