kubernetes/webserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver
  namespace: supp-atendimento
  labels:
    app: webserver
spec:
  type: ClusterIP
  selector:
    app: webserver
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
